Fixed quickjump with effects

--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,7 +1,7 @@
 .theme-dark, .theme-light {
   div[class*="userSettingsAccount-"]::after {
     color: var(--accent);
-    content: 'Theme version: 1.0.6.51';
+    content: 'Theme version: 1.0.6.52';
     font-size: 18px;
     font-weight: bold;
     position: absolute;
@@ -24,7 +24,7 @@
 }
 
 .theme-dark {
-  div[class*="content-"] { background-color: var(--dark-primary); }
+  // div[class*="content-"] { background-color: var(--dark-primary); }
   div[class*="footer-"] { background-color: var(--dark-secondary); }
   .messages-wrapper .messages .divider span {
     background-color: transparent;
